.provarCaches/00D6C0000000xA6UAI/objects/PHSS_Instructor_Certification__c.object
<CustomObject>
    <fields>
        <fullName>Acquired_On__c</fullName>
        <label>Acquired On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Name__c</fullName>
        <label>Certification Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Version__c</fullName>
        <label>Certification Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expired_On__c</fullName>
        <label>Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renew__c</fullName>
        <formula>IF (Expired_On__c &lt; TODAY()-90,
IMAGE(&quot;https://partial-redcross.cs21.force.com/instructorscorner/servlet/servlet.FileDownload?file=015q0000000cqyx&quot;, &quot;Expiring&quot;, 20, 20),&quot;&quot;)</formula>
        <label>Renew</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_Certificate_Number__c</fullName>
        <externalId>true</externalId>
        <label>SABA Certificate Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_Internal_ID__c</fullName>
        <externalId>true</externalId>
        <label>SABA Internal ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PHSS_Instructor_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isExpiring__c</fullName>
        <formula>IF (Expired_On__c-90 &lt;= TODAY(), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Expiring</label>
        <type>Checkbox</type>
    </fields>
    <label>PHSS Instructor Certification</label>
    <listViews>
        <fullName>My_Certifications_2</fullName>
        <columns>NAME</columns>
        <columns>Certification_Version__c</columns>
        <columns>Acquired_On__c</columns>
        <columns>Expired_On__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Certifications</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PHSS Instructor Certifications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>